--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "build": "rimraf dist && webpack -p --progress --hide-modules"
   },
   "dependencies": {
-    "element-ui": "^2.3.4",
-    "vue": "^2.5.16"
+    "element-ui": "^2.15.7",
+    "lib-flexible": "^0.3.2",
+    "postcss-px2rem": "^0.3.0",
+    "px2rem-loader": "^0.1.9",
+    "vue": "^2.5.16",
+    "vue-router": "3.4.9"
   },
   "engines": {
     "node": ">=6"
