--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --hot --env.dev",
     "build": "rimraf dist && webpack -p --progress --hide-modules"
+
   },
   "dependencies": {
     "alice-poptip": "^1.3.0",
@@ -16,12 +17,14 @@
     "postcss-px2rem": "^0.3.0",
     "px2rem-loader": "^0.1.9",
     "vue": "^2.5.16",
-    "vue-router": "3.4.9"
+    "vue-router": "3.4.9",
+    "jsstore": "^4.2.6"
   },
   "engines": {
     "node": ">=6"
   },
   "devDependencies": {
+    "@types/node": "^18.0.5",
     "autoprefixer": "^6.6.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.0",
@@ -37,5 +40,11 @@
     "vue-template-compiler": "^2.5.16",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    }
   }
 }
