--- a/package.json
+++ b/package.json
@@ -4,47 +4,57 @@
   "author": "yi.shyang@ele.me",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --hot --env.dev",
-    "build": "rimraf dist && webpack -p --progress --hide-modules"
-
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "alice-poptip": "^1.3.0",
+    "core-js": "^2.6.5",
     "dayjs": "^1.11.3",
     "element-ui": "^2.15.7",
+    "file-loader": "^6.2.0",
+    "jsstore": "^4.2.6",
     "lib-flexible": "^0.3.2",
-    "lodash": "^4.17.21",
+    "nanoid": "^4.0.0",
     "postcss-px2rem": "^0.3.0",
     "px2rem-loader": "^0.1.9",
-    "vue": "^2.5.16",
-    "vue-router": "3.4.9",
-    "jsstore": "^4.2.6"
+    "vue": "^2.6.10",
+    "vue-router": "3.4.9"
   },
   "engines": {
     "node": ">=6"
   },
   "devDependencies": {
-    "@types/node": "^18.0.5",
-    "autoprefixer": "^6.6.0",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.0",
-    "babel-preset-vue-app": "^1.2.0",
-    "css-loader": "^0.27.0",
-    "file-loader": "^0.10.1",
-    "html-webpack-plugin": "^2.24.1",
-    "postcss-loader": "^1.3.3",
-    "rimraf": "^2.5.4",
-    "style-loader": "^0.13.2",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^13.3.0",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.2"
+    "@vue/cli-plugin-babel": "^3.8.0",
+    "@vue/cli-plugin-eslint": "^3.8.0",
+    "@vue/cli-service": "^3.8.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
     "root": true,
     "env": {
       "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
     }
-  }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
