--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "file-loader": "^6.2.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
