--- a/package.json
+++ b/package.json
@@ -27,13 +27,11 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.8.0",
-    "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
     "file-loader": "^6.2.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "style-loader": "^3.3.1",
+    "less-loader": "^11.0.0"
   },
   "eslintConfig": {
     "root": true,
